Added DepositController and DepositService Improve test cases, some renaming for readability

--- a/pom.xml
+++ b/pom.xml
@@ -100,7 +100,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <mainClass>co.mvpmatch.vendingmachine.Main</mainClass>
+                    <mainClass>co.mvpmatch.vendingmachine.VendingMachineApi</mainClass>
                 </configuration>
             </plugin>
             <plugin>
